# testit-patrol-learn

./: README.md
testit_patrol_learn/: CMakeLists.txt  package.xml  setup.py
testit_patrol_learn/cfg/: config.yaml  spread.conf
testit_patrol_learn/launch/: testit_adapter.launch  testit_patrol.launch
testit_patrol_learn/scripts/: build_containers.sh  launch_testit.sh
testit_patrol_learn/testit_tests/fixtures/: logger.yaml  logger_detection.yaml  weights.yaml
testit_patrol_learn/testit_tests/tests/01/oracle/: oracle.py
